# stuff

./: .gitignore  .travis.yml  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.old  README  README.md  configure.ac  snippets  waf  waf-prepare  wscript
adm/: check-arch-repo-against-aur.rb  dellkeycodes.c  fai-webservice.rb  fai-webservice.run  libs-with-multiple-versions.rb  outdated-libs.rb  randmac.rb
auth/: Makefile.am  grouplist.c  pinlock  pinlock.py
aws/: endpoints.rb  instances_from.rb  instances_from_via_aws.rb  r53_to_bind.rb  user4key.rb
cheat/: ssh2ssl
crap/: big_swap.c  mmap_and_wait.c  weird_gcc.c  xchathash.c
desktop/: gnome-desktop-synchro.rb
diagnostics/: ext3_corruption.sh  follow_opened_files.py  gcore_on_bp.sh  gdb4undeads.c  memcpy2memmove.c  mtrace.c  pagefault_count.stp  processes.stp  sigomgbt.c
fs/: Makefile.am  wtfitf.c
fun/: Makefile.am  bashin.py  bytes_to_chars.c  correct_hello_world.c  firemeplz.c  forking.c  funnypwords.py  hex2ip.c  hex2ip.rb  ip2hex.c  ip2hex.rb  mkpasswd.c  monitor.py  nato.c  slider  superglob.c  sysrq-on-downtime.py  throttler.py  urldecode.c  urlencode.c  yubicheat
mem/: Dockerfile  Makefile.am  allocforkmlock.c  eatexec.c  eatmemory.c  hugepagesdoublecheck.c  hugepagesmaxalloc.c
mini/: COPYING  echo.c  escape.c  false.c  hostid.c  logname.c  printf.c  sync.c  true.c  yes.c  yes2.c
net/: bandwidth_stats.py  bwstats  throttler  throttler.py
sys/: Makefile  bandwidth_stats.py  big_swap.c  conntail.c  crypt.c  errnos.c  errnos.h.gen  errnos.list  follow_opened_files.py  gdb4undeads.c  (+16 more)
(+31 files in other folders)
