bin_PROGRAMS = eatmemory hugepagesdoublecheck hugepagesmaxalloc mmapnwait mmapdoublecheck

eatmemory_SOURCES = eatmemory.c
hugepagesdoublecheck_SOURCES = hugepagesdoublecheck.c
hugepagesmaxalloc_SOURCES = hugepagesmaxalloc.c
mmapnwait_SOURCES = mmapnwait.c
mmapdoublecheck_SOURCES = mmapdoublecheck.c